sumo/tests/sumo/errors/network/edge/cedge/testsuite.sumo
root__edge__cedge#id__empty1
root__edge__cedge#id__ungiven1
root__edge__cedge#id__false1

root__edge__cedge__empty1
root__edge__cedge__false11
root__edge__cedge__false12
root__edge__cedge__missing11
root__edge__cedge__missing12














